# PlatformerEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  check-memory.sh  library.h  main.cpp  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  clang.yml  codecov.yml  doxygen.yml  drmemory.yml  update-game-modules.yml  valgrind.yml
include/: test.hpp
includes/platformer-engine/Audio/: AudioManager.hpp
includes/platformer-engine/Behaviour/: BehaviourSystem.hpp  CollisionBehaviour.hpp  DodgeObjectsBehaviour.hpp  DynamicAnimationBehaviour.hpp  FPSCounterBehaviour.hpp  ForceDrivenEntityBehaviours.hpp  MarioInputBehaviour.hpp  PlayerInputBehaviour.hpp
includes/platformer-engine/Builder/: GameObjectBuilder.hpp  ObjectBuilder.hpp  SceneBuilder.hpp
includes/platformer-engine/ComponentExtension/: Rotatable.hpp  Scaleable.hpp
includes/platformer-engine/Director/: GameObjectDirector.hpp  GameObjectFactory.hpp
includes/platformer-engine/Engine/: Engine.h  Engine.hpp
includes/platformer-engine/EntityState/: EntityPursuitState.hpp  EntityState.hpp  EntityStateMachine.hpp  EntityWanderState.hpp
includes/platformer-engine/Events/: EventsEnum.h
includes/platformer-engine/Exceptions/: AudioNotFoundException.hpp  CameraNotInSceneException.hpp  ClientAlreadyActiveException.hpp  CollisionByIdNotFoundException.hpp  CouldNotConnectToServerException.hpp  FailedToStartServerException.hpp  GameObjectAlreadyInSceneException.hpp  IllegalCollisionBehaviourException.hpp  InvalidPlayerSlotsException.hpp  InvalidPortException.hpp  InvalidSizeException.hpp  LevelCouldNotBeParsedException.hpp  MixerNotInitializedException.hpp  NetworkingCouldNotBeInitialized.hpp  NoClientNetworkManagerActiveException.hpp  NoServerNetworkManagerActiveException.hpp  NoWindowException.hpp  NotImplementedException.hpp  SceneNotLoadedException.hpp  ServerAlreadyActiveException.hpp  ServerCouldNotBeInitialized.hpp
includes/platformer-engine/Facade/: AudioFacade.hpp  GraphicsFacade.hpp  InputFacade.hpp  NetworkingFacade.hpp  TMXParser.hpp
includes/platformer-engine/GameLevel/: GameLevel.hpp  Layer.hpp  TileLayer.hpp
includes/platformer-engine/GraphicsFacade/: Color.h  GraphicsFacade.h  GraphicsFacade.hpp
includes/platformer-engine/Input/: Input.h  Input.hpp
includes/platformer-engine/Level/: Level.h  Level.hpp
includes/platformer-engine/LevelParser/: AbstractLevelParser.hpp  LevelParser.hpp  TMXParser.hpp
includes/platformer-engine/Networking/: Client.hpp  ClientNetworkManager.hpp  ConnectionStatus.hpp  INetworkManager.hpp  NetworkingStatus.hpp  ProtocolDefinitions.hpp  ProtocolPackages.hpp  ServerNetworkManager.hpp
includes/platformer-engine/Physics/: Collision.hpp  (+6 more)
includes/spic-prj-api/: Animator.hpp  AudioSource.cpp  AudioSource.hpp  BehaviourScript.hpp  BoxCollider.hpp  Button.hpp  Camera.hpp  Collider.hpp  Color.cpp  Color.hpp  Component.hpp  Debug.hpp  GameObject.hpp  Input.hpp  Point.hpp  RigidBody.hpp  Scene.hpp  Sprite.hpp  Text.hpp  Transform.hpp  UIObject.hpp
src/: main.cpp
src/API/: Animator.cpp  BoxCollider.cpp  Button.cpp  Camera.cpp  Collider.cpp  GameObject.cpp  Input.cpp  RigidBody.cpp  Sprite.cpp  Text.cpp  UIObject.cpp
src/Behavior/: CollisionBehavior.cpp  CollisionBehavior.hpp  MarioMoveBehavior.cpp  MarioMoveBehavior.hpp
src/Behaviour/: BehaviourSystem.cpp  CollisionBehaviour.cpp  CollisionBehaviour.hpp  DodgeObjectsBehaviour.cpp  DynamicAnimationBehaviour.cpp  FPSCounterBehaviour.cpp  ForceDrivenEntityBehaviours.cpp  MarioInputBehaviour.cpp  PlayerInputBehaviour.cpp
src/Builder/: GameObjectBuilder.cpp  SceneBuilder.cpp
src/Debug/: Debug.cpp
src/Director/: GameObjectDirector.cpp  GameObjectFactory.cpp
src/Engine/: Engine.cpp
src/EntityState/: EntityPursuitState.cpp  EntityStateMachine.cpp  EntityWanderState.cpp
src/Facade/: AudioFacade.cpp  GraphicsFacade.cpp  InputFacade.cpp  InputFacade.hpp  NetworkingFacade.cpp  TMXParser.cpp
src/GameLevel/: TileLayer.cpp
src/GraphicsFacade/: GraphicsFacade.cpp
src/Input/: Input.cpp
src/LevelParser/: LevelParser.cpp  TMXParser.cpp
src/Networking/: Client.cpp  ClientNetworkManager.cpp  INetworkManager.hpp  ServerNetworkManager.cpp
src/Physics/: Collision.cpp  Collision.hpp  ForceDrivenEntity.cpp  ForceDrivenEntityBody.cpp  MarioRigidBody.cpp  MarioRigidBody.hpp  MoveSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerRigidBody.cpp
src/Render/: Window.cpp
src/Scene/: Scene.cpp
src/Storage/: DataContainer.hpp  DataStorageManager.hpp
src/TMXParser/: MapParser.cpp
src/Texture/: AnimatedSprite.cpp  LoadedTextureInfo.cpp  RenderSystem.cpp  Sprite.cpp  TextureManager.cpp
src/Timer/: Timer.cpp
src/UI/: ClickSystem.cpp  FPSCounter.cpp
src/Utility/: guid.cpp
tests/: CameraTest.cpp  CollisionTest.cpp  DataStorageTest.cpp  EngineTests.cpp  ForceDrivenEntityTest.cpp  GameObjectBuilderTest.cpp  GameObjectFactoryTest.cpp  GameObjectTest.cpp  PhysicsTest.cpp  SceneBuilderTest.cpp  SceneTest.cpp  main.cpp
tests/Resources/: TestCollisionBehavior.cpp  TestCollisionBehavior.hpp  TestCollisionBehaviour.cpp  TestCollisionBehaviour.hpp
(+36 files in other folders)
